# LLMFastApi

./: .gitignore  README.md  running.bat  running.sh  stop_ports.bat
.idx/: dev.nix
backend_fastapi/: envexample  main.py  pyproject.toml
backend_fastapi/machine_learning/: llm_service.py
frontend_react/: exampleenvku  package.json
frontend_react/src/: App.js  index.css
frontend_react/src/api/: ApiResponseDisplay.js  apiService.js
frontend_react/src/chat_input/: ChatInput.js
frontend_react/src/sidebar_custom/: SidebarCustom.js
